--- a/package.json
+++ b/package.json
@@ -12,9 +12,28 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.8.1",
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/geo": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
+    "express": "^4.18.2",
+    "formik": "^2.2.9",
+    "react": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.9.0",
+    "yup": "^1.0.2"
   }
 }
