--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "",
   "author": "",
   "scripts": {
-    "build": "parcel build ../public/index.html",
-    "dev": "parcel ../public/index.html --open",
+    "build": "parcel build src/index.js",
+    "dev": "parcel ./src/index.js",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.9.0",
     "yup": "^1.0.2"
