--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "build": "parcel build src/index.js",
     "dev": "parcel src/index.js",
-    "start": "npm run build && npm run dev",
+    "start": "parcel src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "parcel": "^2.8.3",
     "parcel-bundler": "^1.8.1",
     "tailwindcss": "^3.2.7"
   },
