--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/timegrid": "^6.1.5",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
+    "@mui/styles": "^5.11.13",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
