--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "buffer": "^5.7.1",
     "parcel": "^2.8.3",
     "parcel-bundler": "^1.8.1",
     "tailwindcss": "^3.2.7"
@@ -32,10 +33,13 @@
     "@nivo/geo": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.44.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.10.0",
     "yup": "^1.0.2"
