--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/styles": "^5.11.13",
+    "@mui/x-data-grid": "^6.5.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
